--- a/Angular/projeto1/src/app/app.component.html
+++ b/Angular/projeto1/src/app/app.component.html
@@ -1,13 +1,13 @@
-<div class="text-center container mt-5 col-3" style="margin:auto;">
-    <form class="form-signin">
-      <img class="mb-4" src="https://freesvg.org/img/1587415122handincuffs.png" width="200">
-      <h1 class="h3 mb-3 font-weight-normal">Login</h1>
-      <label for="inputEmail" class="sr-only">Email address</label>
-      <input type="email" id="inputEmail" class="form-control mb-3" placeholder="Email address" required autofocus>
-      <label for="inputPassword" class="sr-only">Password</label>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-      <button class="mt-3 btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+<div class="text-center container mt-5 col-3" style="margin:auto;  min-width: 200px;">
+  <form class="form-signin">
+    <img class="mb-4" src="https://freesvg.org/img/1587415122handincuffs.png" width="200">
+    <h1 class="h3 mb-3 font-weight-normal">Login</h1>
+    <label for="inputEmail" class="sr-only">Email address</label>
+    <input type="email" id="inputEmail" class="form-control mb-3" placeholder="Email address" required autofocus>
+    <label for="inputPassword" class="sr-only">Password</label>
+    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+    <button class="mt-3 btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
 </form>
 <button class="mt-5 p-4 btn btn-lg btn-info btn-block" type="submit">Create account</button>
 </div>
-  <!---<app-componente-um-cli></app-componente-um-cli>-->
+<!---<app-componente-um-cli></app-componente-um-cli>-->
