--- a/Angular/projeto1/src/app/componente-criar-conta-cli/componente-criar-conta-cli.component.html
+++ b/Angular/projeto1/src/app/componente-criar-conta-cli/componente-criar-conta-cli.component.html
@@ -73,6 +73,6 @@
             Please select a valid country.
             </div>
         </div>
-          <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
+          <button class="btn btn-primary btn-lg btn-block" type="submit">Create account</button>
 </div>
 </form>
