--- a/Angular/projeto1/src/app/componente-main-cli/componente-main-cli.component.html
+++ b/Angular/projeto1/src/app/componente-main-cli/componente-main-cli.component.html
@@ -68,7 +68,9 @@
                       RT (formerly Russia Today) is an international television network founded in Russia and financed by the Russian state. The English-language version of the channel, focused on global broadcasts, opened on December 10, 2005. Based in Moscow, it broadcasts 24 hours a day of news bulletins, documentaries, debates and talk shows, as well as sports, news and cultural programs about Russia aimed at the overseas news market. <br>- Wikipédia</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                        <form routerLink="/rt">
+                            <button type="submit" class="btn btn-sm btn-outline-secondary">View</button>
+                        </form>
                     </div>
                     <small class="text-muted">9 mins</small>
                   </div>
