--- a/Angular/projeto1/src/app/componente-main-cli/componente-main-cli.component.html
+++ b/Angular/projeto1/src/app/componente-main-cli/componente-main-cli.component.html
@@ -53,7 +53,7 @@
                     CNN is an American pay-TV news channel owned by Warner Bros. Discovery. CNN was founded in 1980 by media owner Ted Turner as a 24-hour news channel. <br>- Wikipédia</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary disabled" data-toggle="tooltip" data-placement="">View</button>
                     </div>
                     <small class="text-muted">9 mins</small>
                   </div>
@@ -85,7 +85,7 @@
                     BBC News is the department within the British Broadcasting Corporation responsible for the corporation's journalism and news area, and for the production of its news programmes, both for television, radio and the internet. <br>- Wikipédia</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary disabled" data-toggle="tooltip" data-placement="">View</button>
                     </div>
                     <small class="text-muted">9 mins</small>
                   </div>
@@ -101,7 +101,7 @@
                     Google News is a news aggregator and application developed by Google. It features a continuous, customizable stream of articles curated from thousands of publishers and journals. Google News is available on Android, iOS and the web <br> - Wikipédia</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary disabled" data-toggle="tooltip" data-placement="">View</button>
                     </div>
                     <small class="text-muted">9 mins</small>
                   </div>
@@ -116,7 +116,7 @@
                     Sky News Arabia is a 24-hour Arabic news channel broadcast primarily in the Middle East and North Africa. It is a joint venture between Sky Group UK and Abu Dhabi Media Investment Corporation, owned by Mansour bin Zayed Al Nahyan, a member of the ruling family of the Emirate of Abu Dhabi. <br> - Wikipédia</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary disabled" data-toggle="tooltip" data-placement="">View</button>
                     </div>
                     <small class="text-muted">9 mins</small>
                   </div>
@@ -131,7 +131,7 @@
                     Africanews is a French multilingual news media service, formerly based in Pointe-Noire, Republic of Congo. Budgetary concerns caused by the coronavirus forced the channel to permanently relocate operations to a small newsroom at sister channel Euronews' headquarters in Lyon, France.<br> - Wikipédia</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary disabled" data-toggle="tooltip" data-placement="">View</button>
                     </div>
                     <small class="text-muted">9 mins</small>
                   </div>
@@ -147,7 +147,7 @@
                     The Kyiv Post is the oldest English-language newspaper in Ukraine, founded in October 1995 by Jed Sunden.<br>- Wikipédia</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary disabled" data-toggle="tooltip" data-placement="">View</button>
                     </div>
                     <small class="text-muted">9 mins</small>
                   </div>
@@ -162,7 +162,9 @@
                     The Guardian is an independent British national daily newspaper, known until 1959 as the Manchester Guardian. Along with its sister newspapers, The Guardian Weekly and The Observer, the Guardian is part of the Guardian Media Group, owned by The Scott Trust Limited.<br>- Wikipédia</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                      <form routerLink="/guardian">
+                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                      </form>
                     </div>
                     <small class="text-muted">9 mins</small>
                   </div>
@@ -177,7 +179,9 @@
                     Israel Hayom is an Israeli national free Hebrew daily newspaper, first published in 2007. It has the largest daily circulation in the country.<br>- Wikipédia</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                      <form routerLink="/israel">
+                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                      </form>
                     </div>
                     <small class="text-muted">9 mins</small>
                   </div>
