--- a/Angular/projeto1/src/app/componente-main-cli/componente-main-cli.component.html
+++ b/Angular/projeto1/src/app/componente-main-cli/componente-main-cli.component.html
@@ -1,4 +1,4 @@
-<body>
+<body class="min-width: 200px">
     <header>
       <div class="collapse bg-dark" id="navbarHeader">
         <div class="container">
